--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.3",
     "resolve": "^1.18.1",
     "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
