--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "browser-image-resizer": "^2.2.1",
     "chalk": "^2.4.2",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
