--- a/package.json
+++ b/package.json
@@ -1,67 +1,67 @@
 {
-  "homepage": "/index.js",
-  "name": "react-auth-template",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "autoprefixer": "^9.8.6",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
-    "chalk": "^2.4.2",
-    "dotenv": "^8.2.0",
-    "dotenv-expand": "^5.1.0",
-    "fs-extra": "^9.1.0",
-    "object-assign": "^4.1.1",
-    "promise": "^8.1.0",
-    "raf": "^3.4.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-alpha.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^8.1.0",
-    "resolve": "^1.18.1",
-    "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "PORT=7165 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "ajv": "^6.12.6",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "babel-preset-react-app": "^10.0.0",
-    "css-loader": "^4.3.0",
-    "file-loader": "^6.1.1",
-    "gh-pages": "^3.2.3",
-    "node-sass": "^6.0.1",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-loader": "^3.0.0",
-    "react-dev-utils": "^11.0.4",
-    "sass-loader": "^10.2.0",
-    "style-loader": "^1.3.0"
-  }
+	"homepage": "https://ga-git-good.github.io/chat-app/",
+	"name": "react-auth-template",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"autoprefixer": "^9.8.6",
+		"axios": "^0.21.1",
+		"bootstrap": "^5.0.2",
+		"chalk": "^2.4.2",
+		"dotenv": "^8.2.0",
+		"dotenv-expand": "^5.1.0",
+		"fs-extra": "^9.1.0",
+		"object-assign": "^4.1.1",
+		"promise": "^8.1.0",
+		"raf": "^3.4.1",
+		"react": "^17.0.2",
+		"react-bootstrap": "^2.0.0-alpha.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.3",
+		"react-toastify": "^8.1.0",
+		"resolve": "^1.18.1",
+		"socket.io": "^4.4.1",
+		"socket.io-client": "^4.4.1",
+		"web-vitals": "^1.1.2"
+	},
+	"scripts": {
+		"start": "PORT=7165 react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"ajv": "^6.12.6",
+		"babel-core": "^6.26.3",
+		"babel-eslint": "^10.1.0",
+		"babel-jest": "^26.6.3",
+		"babel-preset-react-app": "^10.0.0",
+		"css-loader": "^4.3.0",
+		"file-loader": "^6.1.1",
+		"gh-pages": "^3.2.3",
+		"node-sass": "^6.0.1",
+		"postcss-flexbugs-fixes": "^4.2.1",
+		"postcss-loader": "^3.0.0",
+		"react-dev-utils": "^11.0.4",
+		"sass-loader": "^10.2.0",
+		"style-loader": "^1.3.0"
+	}
 }
